<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/login_ingnore_first_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_login_name"
            android:textSize="18sp" />
        
        <com.scau.keshe.sharespace.welcome.view.MyInputEditText 
            android:id="@+id/login_input_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:inputType="text"
			android:background="@null"
            />
    </LinearLayout>
    
    <View 
        android:id="@+id/login_ingnore_little_line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/login_ingnore_first_linear"
        />
    
    <LinearLayout
        android:id="@+id/login_ingnore_second_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_ingnore_little_line"
        android:padding="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_login_password"
            android:textSize="18sp" />
        
        <com.scau.keshe.sharespace.welcome.view.MyInputEditText 
            android:id="@+id/login_input_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:inputType="textPassword"
            android:background="@null"
            
            />
        <ImageView 
            android:id="@+id/login_input_showpsd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher"
            />
    </LinearLayout>
    
    <View 
        android:id="@+id/login_ingnore_little_line1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/login_ingnore_second_linear"
        />
    
    <Button 
        android:id="@+id/login_input_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/content_login_confirm"
        android:layout_below="@+id/login_ingnore_little_line1"
        />
	<TextView 
	    android:id="@+id/login_input_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/content_signup_jump"
        android:textColor="@android:color/holo_blue_light"
        android:layout_below="@+id/login_input_confirm_button"
	    />
</RelativeLayout>